--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: La Dolce Vita&#58; Italy 2018
+title: "La Dolce Vita: Italy 2018"
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
     A blog about our travels through Italy in the spring of 2018
