--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: "La Dolce Vita: Italy 2018"
-email: your-email@example.com
+# email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
     A blog about our travels through Italy in the spring of 2018
 baseurl: "" # the subpath of your site, e.g. /blog
