changed footer text

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: "La Dolce Vita: Italy 2018"
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-    A blog about our travels through Italy in the spring of 2018
+    A blog of our travels through Italy in the spring of 2018
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: adamantibody
